Event timer z-index fixes #403

--- a/source/core/resources/style_gca.css
+++ b/source/core/resources/style_gca.css
@@ -1614,10 +1614,10 @@
                 /* Buff side-icons incomplete */
                 .glfix .buff {display: block!important;} 
                 /* Event timer overhaul (compatible with .event_bar_moved) */
-		.glfix #cooldown_bar_event {background-image: unset!important;background-color: #200500!important;left: 352px!important;top: 195px!important;width: 402px!important;height: 11px!important;outline-style: ridge;outline-width: 2px;outline-color: #9f8548;} 
+		.glfix #cooldown_bar_event {background-image: unset!important;background-color: #200500!important;left: 352px!important;top: 195px!important;width: 402px!important;height: 11px!important;outline-style: ridge;outline-width: 2px;outline-color: #9f8548;z-index: 300;} 
 		.glfix #cooldown_bar_text_event {font-size: 11px!important;margin-top: -3px!important;} 
 		.glfix.event_bar_moved #cooldown_bar_event {margin-top: unset!important;}
-		.glfix ul#mainnav {z-index: 500;}	
+		.glfix ul#mainnav li a {z-index: 301;}		
 
 	/* Ester Eggs
 	-------------------------------------------------- */
